@@ -1,3 +1,9 @@
+AA-2004-10-27-1: Bugfix:    qmon returns an error dialog, when editing a calendar
+                 Issue:     1267
+                 Bugtraq:   6185169
+                 Changed:   qmon
+                 Review:    CR
+
 AA-2004-10-27-0: Bugfix:    qmon job customize weird @{} field names
                             additional fields canot be added
                  Issue:     1307
